--- a/configs/datasets/imagenet/imagenet_adversarial_ood.yml
+++ b/configs/datasets/imagenet/imagenet_adversarial_ood.yml
@@ -13,11 +13,20 @@ ood_dataset:
   num_gpus: '@{num_gpus}'
   num_machines: '@{num_machines}'
   split_names: [nearood, farood]
+  # val:
+  #   data_dir: ./data/images_largescale/
+  #   imglist_pth: ./data/benchmark_imglist/imagenet/val_openimage_o.txt
   nearood:
-    datasets: [pgd]
+    datasets: [pgd, fgsm, df]
     pgd:
       data_dir: ./data/images_largescale/
       imglist_pth: ./data/benchmark_imglist/imagenet/test_pgd_resnet50_imagenet.txt
+    fgsm:
+      data_dir: ./data/images_largescale/
+      imglist_pth: ./data/benchmark_imglist/imagenet/test_fgsm_resnet50_imagenet.txt
+    df:
+      data_dir: ./data/images_largescale/
+      imglist_pth: ./data/benchmark_imglist/imagenet/test_df_resnet50_imagenet.txt
   farood:
     datasets: [masked_pgd]
     masked_pgd:
